fixed scrollbar

--- a/css/artiststyle.css
+++ b/css/artiststyle.css
@@ -6,9 +6,22 @@
     height: 45rem;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    scrollbar-width: none;  
+}
+.photo-scroll, .content-shadow{
+    box-shadow: 0px 0px .3rem #555  ;
+    padding: 0;
+}
+.content-scroll{
+    padding-left: 24px;
 }
 
-.photo-scroll > .row{
+.profile-disco{
+    box-shadow: 0px 0px 5px 1px #888 inset ;
+}
+
+
+.photo-scroll > .row {
     height: 25rem;
     overflow: hidden;
 }
